@@ -1,3 +1,8 @@
+2012-10-23  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclInt.h:    Remove unused TclpLoadFile function.
+	* generic/tclIOUtil.c
+
 2012-10-14  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tclDictObj.c: [Bug 3576509]: tcl::Bgerror crashes with invalid
